@@ -1,23 +1,23 @@
 package io.quarkus.deployment.dev.testing;
 
 import java.io.IOException;
-import java.io.InputStream;
+import java.io.UncheckedIOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
-import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.Properties;
 import java.util.Set;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.function.BiConsumer;
+import java.util.function.Consumer;
+import java.util.function.Predicate;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
@@ -26,16 +26,22 @@ import org.junit.platform.launcher.TestIdentifier;
 
 import io.quarkus.bootstrap.app.CuratedApplication;
 import io.quarkus.bootstrap.app.QuarkusBootstrap;
+import io.quarkus.bootstrap.app.QuarkusBootstrap.Mode;
+import io.quarkus.bootstrap.classloading.ClassPathElement;
 import io.quarkus.bootstrap.classloading.QuarkusClassLoader;
+import io.quarkus.bootstrap.model.ApplicationModel;
 import io.quarkus.deployment.dev.ClassScanResult;
 import io.quarkus.deployment.dev.CompilationProvider;
 import io.quarkus.deployment.dev.DevModeContext;
+import io.quarkus.deployment.dev.DevModeContext.ModuleInfo;
 import io.quarkus.deployment.dev.QuarkusCompiler;
 import io.quarkus.deployment.dev.RuntimeUpdatesProcessor;
 import io.quarkus.dev.spi.DevModeType;
 import io.quarkus.dev.testing.TestWatchedFiles;
+import io.quarkus.maven.dependency.ResolvedDependency;
 import io.quarkus.paths.PathList;
-import io.quarkus.runtime.configuration.HyphenateEnumConverter;
+import io.smallrye.config.SmallRyeConfig;
+import io.smallrye.config.SmallRyeConfigBuilder;
 
 public class TestSupport implements TestController {
 
@@ -69,13 +75,13 @@ public class TestSupport implements TestController {
     private Throwable compileProblem;
     private volatile boolean firstRun = true;
 
-    String appPropertiesIncludeTags;
-    String appPropertiesExcludeTags;
+    List<String> appPropertiesIncludeTags;
+    List<String> appPropertiesExcludeTags;
     String appPropertiesIncludePattern;
     String appPropertiesExcludePattern;
-    String appPropertiesIncludeEngines;
-    String appPropertiesExcludeEngines;
-    String appPropertiesTestType;
+    List<String> appPropertiesIncludeEngines;
+    List<String> appPropertiesExcludeEngines;
+    TestType appPropertiesTestType;
     private TestConfig config;
     private volatile boolean closed;
 
@@ -143,46 +149,37 @@ public class TestSupport implements TestController {
         }
     }
 
+    private static Pattern getCompiledPatternOrNull(Optional<String> patternStr) {
+        return patternStr.isPresent() ? Pattern.compile(patternStr.get()) : null;
+    }
+
     public void init() {
         if (moduleRunners.isEmpty()) {
-            TestWatchedFiles.setWatchedFilesListener((s) -> RuntimeUpdatesProcessor.INSTANCE.setWatchedFilePaths(s, true));
+            TestWatchedFiles.setWatchedFilesListener(
+                    (paths, predicates) -> RuntimeUpdatesProcessor.INSTANCE.setWatchedFilePaths(paths, predicates, true));
+            final Pattern includeModulePattern = getCompiledPatternOrNull(config.includeModulePattern());
+            final Pattern excludeModulePattern = getCompiledPatternOrNull(config.excludeModulePattern());
             for (var module : context.getAllModules()) {
-                boolean mainModule = module == context.getApplicationRoot();
-                if (config.onlyTestApplicationModule && !mainModule) {
+                final boolean mainModule = module == context.getApplicationRoot();
+                if (config.onlyTestApplicationModule() && !mainModule) {
                     continue;
-                } else if (config.includeModulePattern.isPresent()) {
-                    Pattern p = Pattern.compile(config.includeModulePattern.get());
-                    if (!p.matcher(module.getArtifactKey().getGroupId() + ":" + module.getArtifactKey().getArtifactId())
+                } else if (includeModulePattern != null) {
+                    if (!includeModulePattern
+                            .matcher(module.getArtifactKey().getGroupId() + ":" + module.getArtifactKey().getArtifactId())
                             .matches()) {
                         continue;
                     }
-                } else if (config.excludeModulePattern.isPresent()) {
-                    Pattern p = Pattern.compile(config.excludeModulePattern.get());
-                    if (p.matcher(module.getArtifactKey().getGroupId() + ":" + module.getArtifactKey().getArtifactId())
+                } else if (excludeModulePattern != null) {
+                    if (excludeModulePattern
+                            .matcher(module.getArtifactKey().getGroupId() + ":" + module.getArtifactKey().getArtifactId())
                             .matches()) {
                         continue;
                     }
                 }
 
                 try {
-                    Set<Path> paths = new LinkedHashSet<>();
-                    module.getTest().ifPresent(test -> {
-                        paths.add(Paths.get(test.getClassesPath()));
-                        if (test.getResourcesOutputPath() != null) {
-                            paths.add(Paths.get(test.getResourcesOutputPath()));
-                        }
-                    });
-                    if (mainModule) {
-                        curatedApplication.getQuarkusBootstrap().getApplicationRoot().forEach(paths::add);
-                    } else {
-                        paths.add(Paths.get(module.getMain().getClassesPath()));
-                    }
-                    for (var i : paths) {
-                        if (!Files.exists(i)) {
-                            Files.createDirectories(i);
-                        }
-                    }
-                    QuarkusBootstrap.Builder builder = curatedApplication.getQuarkusBootstrap().clonedBuilder()
+                    final Path projectDir = Path.of(module.getProjectDirectory());
+                    final QuarkusBootstrap.Builder bootstrapConfig = curatedApplication.getQuarkusBootstrap().clonedBuilder()
                             .setMode(QuarkusBootstrap.Mode.TEST)
                             .setAssertionsEnabled(true)
                             .setDisableClasspathCache(false)
@@ -192,20 +189,63 @@ public class TestSupport implements TestController {
                             .setTest(true)
                             .setAuxiliaryApplication(true)
                             .setHostApplicationIsTestOnly(devModeType == DevModeType.TEST_ONLY)
-                            .setProjectRoot(Paths.get(module.getProjectDirectory()))
-                            .setApplicationRoot(PathList.from(paths))
+                            .setProjectRoot(projectDir)
+                            .setApplicationRoot(getRootPaths(module, mainModule))
                             .clearLocalArtifacts();
+
+                    final QuarkusClassLoader ctParentFirstCl;
+                    final Mode currentMode = curatedApplication.getQuarkusBootstrap().getMode();
+                    // in case of quarkus:test the application model will already include test dependencies
+                    if (Mode.CONTINUOUS_TEST != currentMode && Mode.TEST != currentMode) {
+                        // In this case the current application model does not include test dependencies.
+                        // 1) we resolve an application model for test mode;
+                        // 2) we create a new CT base classloader that includes parent-first test scoped dependencies
+                        // so that they are not loaded by augment and base runtime classloaders.
+                        var appModelFactory = curatedApplication.getQuarkusBootstrap().newAppModelFactory();
+                        appModelFactory.setBootstrapAppModelResolver(null);
+                        appModelFactory.setTest(true);
+                        appModelFactory.setLocalArtifacts(Set.of());
+                        if (!mainModule) {
+                            appModelFactory.setAppArtifact(null);
+                            appModelFactory.setProjectRoot(projectDir);
+                        }
+                        final ApplicationModel testModel = appModelFactory.resolveAppModel().getApplicationModel();
+                        bootstrapConfig.setExistingModel(testModel);
+
+                        QuarkusClassLoader.Builder clBuilder = null;
+                        var currentParentFirst = curatedApplication.getApplicationModel().getParentFirst();
+                        for (ResolvedDependency d : testModel.getDependencies()) {
+                            if (d.isClassLoaderParentFirst() && !currentParentFirst.contains(d.getKey())) {
+                                if (clBuilder == null) {
+                                    clBuilder = QuarkusClassLoader.builder("Continuous Testing Parent-First"
+                                            + curatedApplication.getClassLoaderNameSuffix(),
+                                            getClass().getClassLoader().getParent(), false);
+                                }
+                                clBuilder.addNormalPriorityElement(ClassPathElement.fromDependency(d));
+                            }
+                        }
+
+                        ctParentFirstCl = clBuilder == null ? null : clBuilder.build();
+                        if (ctParentFirstCl != null) {
+                            bootstrapConfig.setBaseClassLoader(ctParentFirstCl);
+                        }
+                    } else {
+                        ctParentFirstCl = null;
+                        if (mainModule) {
+                            // the model and the app classloader already include test scoped dependencies
+                            bootstrapConfig.setExistingModel(curatedApplication.getApplicationModel());
+                        }
+                    }
+
                     //we always want to propagate parent first
                     //so it is consistent. Some modules may not have quarkus dependencies
                     //so they won't load junit parent first without this
                     for (var i : curatedApplication.getApplicationModel().getDependencies()) {
                         if (i.isClassLoaderParentFirst()) {
-                            builder.addParentFirstArtifact(i.getKey());
+                            bootstrapConfig.addParentFirstArtifact(i.getKey());
                         }
                     }
-                    var testCuratedApplication = builder // we want to re-discover the local dependencies with test scope
-                            .build()
-                            .bootstrap();
+                    var testCuratedApplication = bootstrapConfig.build().bootstrap();
                     if (mainModule) {
                         //horrible hack
                         //we really need a compiler per module but we are not setup for this yet
@@ -215,7 +255,7 @@ public class TestSupport implements TestController {
                         //has complained much
                         compiler = new QuarkusCompiler(testCuratedApplication, compilationProviders, context);
                     }
-                    var testRunner = new ModuleTestRunner(this, context, testCuratedApplication, module);
+                    var testRunner = new ModuleTestRunner(this, testCuratedApplication, module);
                     QuarkusClassLoader cl = (QuarkusClassLoader) getClass().getClassLoader();
                     cl.addCloseTask(new Runnable() {
                         @Override
@@ -224,6 +264,9 @@ public class TestSupport implements TestController {
                                 close();
                             } finally {
                                 testCuratedApplication.close();
+                                if (ctParentFirstCl != null) {
+                                    ctParentFirstCl.close();
+                                }
                             }
                         }
                     });
@@ -233,6 +276,37 @@ public class TestSupport implements TestController {
                 }
             }
         }
+    }
+
+    private PathList getRootPaths(ModuleInfo module, final boolean mainModule) {
+        final PathList.Builder pathBuilder = PathList.builder();
+        final Consumer<Path> paths = new Consumer<>() {
+            @Override
+            public void accept(Path t) {
+                if (!pathBuilder.contains(t)) {
+                    if (!Files.exists(t)) {
+                        try {
+                            Files.createDirectories(t);
+                        } catch (IOException e) {
+                            throw new UncheckedIOException(e);
+                        }
+                    }
+                    pathBuilder.add(t);
+                }
+            }
+        };
+        module.getTest().ifPresent(test -> {
+            paths.accept(Path.of(test.getClassesPath()));
+            if (test.getResourcesOutputPath() != null) {
+                paths.accept(Path.of(test.getResourcesOutputPath()));
+            }
+        });
+        if (mainModule) {
+            curatedApplication.getQuarkusBootstrap().getApplicationRoot().forEach(paths::accept);
+        } else {
+            paths.accept(Path.of(module.getMain().getClassesPath()));
+        }
+        return pathBuilder.build();
     }
 
     public synchronized void close() {
@@ -250,6 +324,8 @@ public class TestSupport implements TestController {
         for (var runner : moduleRunners) {
             runner.abort();
         }
+        TestWatchedFiles.setWatchedFilesListener(
+                (BiConsumer<Map<String, Boolean>, List<Map.Entry<Predicate<String>, Boolean>>>) null);
     }
 
     public void runTests() {
@@ -432,98 +508,72 @@ public class TestSupport implements TestController {
      * We also can't apply this as part of the test startup, as it is too
      * late and the filters have already been resolved.
      * <p>
-     * We manually check for application.properties changes and apply them.
+     * We manually check for configuration changes and apply them.
      */
     private void handleApplicationPropertiesChange() {
-        for (Path rootPath : curatedApplication.getQuarkusBootstrap().getApplicationRoot()) {
-            Path appProps = rootPath.resolve("application.properties");
-            if (Files.exists(appProps)) {
-                Properties p = new Properties();
-                try (InputStream in = Files.newInputStream(appProps)) {
-                    p.load(in);
-                } catch (IOException e) {
-                    throw new RuntimeException(e);
+        SmallRyeConfig updatedConfig = getMinimalConfig();
+
+        List<String> includeTags = getTrimmedListFromConfig(updatedConfig, "quarkus.test.include-tags").orElse(null);
+        List<String> excludeTags = getTrimmedListFromConfig(updatedConfig, "quarkus.test.exclude-tags").orElse(null);
+        String includePattern = updatedConfig.getOptionalValue("quarkus.test.include-pattern", String.class).orElse(null);
+        String excludePattern = updatedConfig.getOptionalValue("quarkus.test.exclude-pattern", String.class).orElse(null);
+        List<String> includeEngines = getTrimmedListFromConfig(updatedConfig, "quarkus.test.include-engines").orElse(null);
+        List<String> excludeEngines = getTrimmedListFromConfig(updatedConfig, "quarkus.test.exclude-engines").orElse(null);
+        TestType testType = updatedConfig.getOptionalValue("quarkus.test.type", TestType.class).orElse(TestType.ALL);
+
+        if (!firstRun) {
+            if (!Objects.equals(includeTags, appPropertiesIncludeTags)) {
+                this.includeTags = Objects.requireNonNullElse(includeTags, Collections.emptyList());
+            }
+            if (!Objects.equals(excludeTags, appPropertiesExcludeTags)) {
+                this.excludeTags = Objects.requireNonNullElse(excludeTags, Collections.emptyList());
+            }
+            if (!Objects.equals(includePattern, appPropertiesIncludePattern)) {
+                if (includePattern == null) {
+                    this.include = null;
+                } else {
+                    this.include = Pattern.compile(includePattern);
                 }
-                String includeTags = p.getProperty("quarkus.test.include-tags");
-                String excludeTags = p.getProperty("quarkus.test.exclude-tags");
-                String includePattern = p.getProperty("quarkus.test.include-pattern");
-                String excludePattern = p.getProperty("quarkus.test.exclude-pattern");
-                String includeEngines = p.getProperty("quarkus.test.include-engines");
-                String excludeEngines = p.getProperty("quarkus.test.exclude-engines");
-                String testType = p.getProperty("quarkus.test.type");
-                if (!firstRun) {
-                    if (!Objects.equals(includeTags, appPropertiesIncludeTags)) {
-                        if (includeTags == null) {
-                            this.includeTags = Collections.emptyList();
-                        } else {
-                            this.includeTags = Arrays.stream(includeTags.split(",")).map(String::trim)
-                                    .collect(Collectors.toList());
-                        }
-                    }
-                    if (!Objects.equals(excludeTags, appPropertiesExcludeTags)) {
-                        if (excludeTags == null) {
-                            this.excludeTags = Collections.emptyList();
-                        } else {
-                            this.excludeTags = Arrays.stream(excludeTags.split(",")).map(String::trim)
-                                    .collect(Collectors.toList());
-                        }
-                    }
-                    if (!Objects.equals(includePattern, appPropertiesIncludePattern)) {
-                        if (includePattern == null) {
-                            include = null;
-                        } else {
-                            include = Pattern.compile(includePattern);
-                        }
-                    }
-                    if (!Objects.equals(excludePattern, appPropertiesExcludePattern)) {
-                        if (excludePattern == null) {
-                            exclude = null;
-                        } else {
-                            exclude = Pattern.compile(excludePattern);
-                        }
-                    }
-                    if (!Objects.equals(includeEngines, appPropertiesIncludeEngines)) {
-                        if (includeEngines == null) {
-                            this.includeEngines = Collections.emptyList();
-                        } else {
-                            this.includeEngines = Arrays.stream(includeEngines.split(",")).map(String::trim)
-                                    .collect(Collectors.toList());
-                        }
-                    }
-                    if (!Objects.equals(excludeEngines, appPropertiesExcludeEngines)) {
-                        if (excludeEngines == null) {
-                            this.excludeEngines = Collections.emptyList();
-                        } else {
-                            this.excludeEngines = Arrays.stream(excludeEngines.split(",")).map(String::trim)
-                                    .collect(Collectors.toList());
-                        }
-                    }
-                    if (!Objects.equals(testType, appPropertiesTestType)) {
-                        if (testType == null) {
-                            this.testType = TestType.ALL;
-                        } else {
-                            this.testType = new HyphenateEnumConverter<>(TestType.class).convert(testType);
-                        }
-                    }
+            }
+            if (!Objects.equals(excludePattern, appPropertiesExcludePattern)) {
+                if (excludePattern == null) {
+                    this.exclude = null;
+                } else {
+                    this.exclude = Pattern.compile(excludePattern);
                 }
-                appPropertiesIncludeTags = includeTags;
-                appPropertiesExcludeTags = excludeTags;
-                appPropertiesIncludePattern = includePattern;
-                appPropertiesExcludePattern = excludePattern;
-                appPropertiesIncludeEngines = includeEngines;
-                appPropertiesExcludeEngines = excludeEngines;
-                appPropertiesTestType = testType;
-                break;
+            }
+            if (!Objects.equals(includeEngines, appPropertiesIncludeEngines)) {
+                this.includeEngines = Objects.requireNonNullElse(includeEngines, Collections.emptyList());
+            }
+            if (!Objects.equals(excludeEngines, appPropertiesExcludeEngines)) {
+                this.excludeEngines = Objects.requireNonNullElse(excludeEngines, Collections.emptyList());
+            }
+            if (!Objects.equals(testType, appPropertiesTestType)) {
+                this.testType = testType;
             }
         }
+
+        appPropertiesIncludeTags = includeTags;
+        appPropertiesExcludeTags = excludeTags;
+        appPropertiesIncludePattern = includePattern;
+        appPropertiesExcludePattern = excludePattern;
+        appPropertiesIncludeEngines = includeEngines;
+        appPropertiesExcludeEngines = excludeEngines;
+        appPropertiesTestType = testType;
+    }
+
+    private static SmallRyeConfig getMinimalConfig() {
+        return new SmallRyeConfigBuilder().addDefaultSources().build();
+    }
+
+    private Optional<List<String>> getTrimmedListFromConfig(SmallRyeConfig updatedConfig, String property) {
+        return updatedConfig.getOptionalValue(property, String.class)
+                .map(t -> Arrays.stream(t.split(",")).map(String::trim)
+                        .collect(Collectors.toList()));
     }
 
     public boolean isStarted() {
         return started;
-    }
-
-    public CuratedApplication getCuratedApplication() {
-        return curatedApplication;
     }
 
     public QuarkusCompiler getCompiler() {
