@@ -9,9 +9,11 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
-import javax.enterprise.context.ApplicationScoped;
-import javax.enterprise.context.RequestScoped;
-import javax.inject.Singleton;
+import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.enterprise.context.Dependent;
+import jakarta.enterprise.context.RequestScoped;
+import jakarta.enterprise.context.SessionScoped;
+import jakarta.inject.Singleton;
 
 import io.quarkus.arc.InjectableContext;
 import io.quarkus.arc.ManagedContext;
@@ -25,13 +27,17 @@ class Contexts {
 
     // Built-in contexts
     final ManagedContext requestContext;
+    final ManagedContext sessionContext;
     final InjectableContext applicationContext;
     final InjectableContext singletonContext;
+    final InjectableContext dependentContext;
 
     // Used to optimize the getContexts(Class<? extends Annotation>)
     private final List<InjectableContext> applicationContextSingleton;
     private final List<InjectableContext> singletonContextSingleton;
+    private final List<InjectableContext> dependentContextSingleton;
     private final List<InjectableContext> requestContextSingleton;
+    private final List<InjectableContext> sessionContextSingleton;
 
     // Lazily computed list of contexts for a scope
     private final ClassValue<List<InjectableContext>> unoptimizedContexts;
@@ -39,16 +45,22 @@ class Contexts {
     // Precomputed values
     final Set<Class<? extends Annotation>> scopes;
 
-    Contexts(ManagedContext requestContext, InjectableContext applicationContext,
-            InjectableContext singletonContext, Map<Class<? extends Annotation>, List<InjectableContext>> contexts) {
+    Contexts(ManagedContext requestContext, ManagedContext sessionContext, InjectableContext applicationContext,
+            InjectableContext singletonContext,
+            InjectableContext dependentContext, Map<Class<? extends Annotation>, List<InjectableContext>> contexts) {
         this.requestContext = requestContext;
+        this.sessionContext = sessionContext;
         this.applicationContext = applicationContext;
         this.singletonContext = singletonContext;
+        this.dependentContext = dependentContext;
 
-        this.applicationContextSingleton = Collections.singletonList(applicationContext);
-        this.singletonContextSingleton = Collections.singletonList(singletonContext);
+        this.applicationContextSingleton = List.of(applicationContext);
+        this.singletonContextSingleton = List.of(singletonContext);
+        this.dependentContextSingleton = List.of(dependentContext);
         List<InjectableContext> requestContexts = contexts.get(RequestScoped.class);
-        this.requestContextSingleton = requestContexts != null ? requestContexts : Collections.singletonList(requestContext);
+        this.requestContextSingleton = requestContexts != null ? requestContexts : List.of(requestContext);
+        List<InjectableContext> sessionContexts = contexts.get(SessionScoped.class);
+        this.sessionContextSingleton = sessionContexts != null ? sessionContexts : List.of(sessionContext);
 
         if (!contexts.isEmpty()) {
             // At least one custom context is registered
@@ -77,21 +89,26 @@ class Contexts {
             Set<Class<? extends Annotation>> all = new HashSet<>(contexts.keySet());
             all.add(ApplicationScoped.class);
             all.add(Singleton.class);
+            all.add(Dependent.class);
             all.add(RequestScoped.class);
+            all.add(SessionScoped.class);
             this.scopes = Set.copyOf(all);
         } else {
             // No custom context is registered
             this.unoptimizedContexts = null;
-            this.scopes = Set.of(ApplicationScoped.class, Singleton.class, RequestScoped.class);
+            this.scopes = Set.of(ApplicationScoped.class, Singleton.class, Dependent.class, RequestScoped.class,
+                    SessionScoped.class);
         }
     }
 
     InjectableContext getActiveContext(Class<? extends Annotation> scopeType) {
-        // Application/Singleton context is always active and it's not possible to register a custom context for these scopes
+        // Application/Singleton/Dependent context is always active and it's not possible to register a custom context for these scopes
         if (ApplicationScoped.class.equals(scopeType)) {
             return applicationContext;
         } else if (Singleton.class.equals(scopeType)) {
             return singletonContext;
+        } else if (Dependent.class.equals(scopeType)) {
+            return dependentContext;
         }
         List<InjectableContext> contextsForScope = getContexts(scopeType);
         InjectableContext selected = null;
@@ -99,7 +116,7 @@ class Contexts {
             if (context.isActive()) {
                 if (selected != null) {
                     throw new IllegalArgumentException(
-                            "More than one context object for the given scope: " + selected + " " + context);
+                            "More than one active context object for the given scope: " + selected + " " + context);
                 }
                 selected = context;
             }
@@ -108,13 +125,17 @@ class Contexts {
     }
 
     List<InjectableContext> getContexts(Class<? extends Annotation> scopeType) {
-        // Optimize for buil-in normal scopes - this method is used internally during client proxy invocation
+        // Optimize for built-in scopes - this method is used internally during client proxy invocation
         if (ApplicationScoped.class.equals(scopeType)) {
             return applicationContextSingleton;
         } else if (RequestScoped.class.equals(scopeType)) {
             return requestContextSingleton;
         } else if (Singleton.class.equals(scopeType)) {
             return singletonContextSingleton;
+        } else if (Dependent.class.equals(scopeType)) {
+            return dependentContextSingleton;
+        } else if (SessionScoped.class.equals(scopeType)) {
+            return sessionContextSingleton;
         }
         return unoptimizedContexts != null ? unoptimizedContexts.get(scopeType) : Collections.emptyList();
     }
@@ -122,15 +143,19 @@ class Contexts {
     static class Builder {
 
         private final ManagedContext requestContext;
+        private final ManagedContext sessionContext;
         private final InjectableContext applicationContext;
         private final InjectableContext singletonContext;
+        private final InjectableContext dependentContext;
         private final Map<Class<? extends Annotation>, List<InjectableContext>> contexts = new HashMap<>();
 
-        public Builder(ManagedContext requestContext, InjectableContext applicationContext,
-                InjectableContext singletonContext) {
+        public Builder(ManagedContext requestContext, ManagedContext sessionContext, InjectableContext applicationContext,
+                InjectableContext singletonContext, InjectableContext dependentContext) {
             this.requestContext = requestContext;
+            this.sessionContext = sessionContext;
             this.applicationContext = applicationContext;
             this.singletonContext = singletonContext;
+            this.dependentContext = dependentContext;
         }
 
         Builder putContext(InjectableContext context) {
@@ -151,7 +176,8 @@ class Contexts {
                 // If a custom request context is registered then add the built-in context as well
                 putContext(requestContext);
             }
-            return new Contexts(requestContext, applicationContext, singletonContext, contexts);
+            return new Contexts(requestContext, sessionContext, applicationContext, singletonContext, dependentContext,
+                    contexts);
         }
 
     }
