@@ -1,22 +1,21 @@
 package io.quarkus.bootstrap;
 
-import java.io.DataInputStream;
-import java.io.DataOutputStream;
+import static io.quarkus.bootstrap.util.BootstrapUtils.readAppModelWithWorkspaceId;
+import static io.quarkus.bootstrap.util.BootstrapUtils.writeAppModelWithWorkspaceId;
+
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.ObjectInputStream;
-import java.io.ObjectOutputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Properties;
 import java.util.Set;
 
-import org.apache.maven.model.Dependency;
 import org.jboss.logging.Logger;
 
 import io.quarkus.bootstrap.app.CurationResult;
@@ -26,10 +25,12 @@ import io.quarkus.bootstrap.resolver.AppModelResolverException;
 import io.quarkus.bootstrap.resolver.BootstrapAppModelResolver;
 import io.quarkus.bootstrap.resolver.maven.BootstrapMavenContext;
 import io.quarkus.bootstrap.resolver.maven.BootstrapMavenContextConfig;
+import io.quarkus.bootstrap.resolver.maven.IncubatingApplicationModelResolver;
 import io.quarkus.bootstrap.resolver.maven.MavenArtifactResolver;
 import io.quarkus.bootstrap.resolver.maven.workspace.LocalProject;
 import io.quarkus.bootstrap.resolver.maven.workspace.LocalWorkspace;
 import io.quarkus.bootstrap.resolver.maven.workspace.ModelUtils;
+import io.quarkus.bootstrap.util.BootstrapUtils;
 import io.quarkus.bootstrap.util.IoUtils;
 import io.quarkus.maven.dependency.ArtifactCoords;
 import io.quarkus.maven.dependency.ArtifactKey;
@@ -52,8 +53,6 @@ public class BootstrapAppModelFactory {
     public static final String CREATOR_APP_TYPE = "creator.app.type";
     public static final String CREATOR_APP_VERSION = "creator.app.version";
 
-    private static final int CP_CACHE_FORMAT_ID = 2;
-
     private static final Logger log = Logger.getLogger(BootstrapAppModelFactory.class);
 
     public static BootstrapAppModelFactory newInstance() {
@@ -74,9 +73,9 @@ public class BootstrapAppModelFactory {
     private MavenArtifactResolver mavenArtifactResolver;
 
     private BootstrapMavenContext mvnContext;
-    Set<ArtifactKey> reloadableModules = Collections.emptySet();
+    Set<ArtifactKey> reloadableModules = Set.of();
 
-    private Collection<io.quarkus.maven.dependency.Dependency> forcedDependencies = Collections.emptyList();
+    private Collection<io.quarkus.maven.dependency.Dependency> forcedDependencies = List.of();
 
     private BootstrapAppModelFactory() {
     }
@@ -154,22 +153,33 @@ public class BootstrapAppModelFactory {
                 } else {
                     mvn = mavenArtifactResolver;
                 }
-
-                return bootstrapAppModelResolver = new BootstrapAppModelResolver(mvn)
-                        .setTest(test)
-                        .setDevMode(devMode);
+                return bootstrapAppModelResolver = initAppModelResolver(mvn);
             }
 
             MavenArtifactResolver mvn = mavenArtifactResolver;
             if (mvn == null) {
                 mvn = new MavenArtifactResolver(createBootstrapMavenContext());
             }
-            return bootstrapAppModelResolver = new BootstrapAppModelResolver(mvn)
-                    .setTest(test)
-                    .setDevMode(devMode);
+            return bootstrapAppModelResolver = initAppModelResolver(mvn);
         } catch (Exception e) {
             throw new RuntimeException("Failed to create application model resolver for " + projectRoot, e);
         }
+    }
+
+    private BootstrapAppModelResolver initAppModelResolver(MavenArtifactResolver artifactResolver) {
+        var appModelResolver = new BootstrapAppModelResolver(artifactResolver)
+                .setTest(test)
+                .setDevMode(devMode);
+        var project = artifactResolver.getMavenContext().getCurrentProject();
+        if (project != null) {
+            final Properties modelProps = project.getModelBuildingResult() == null
+                    ? project.getRawModel().getProperties()
+                    : project.getModelBuildingResult().getEffectiveModel().getProperties();
+            appModelResolver.setIncubatingModelResolver(IncubatingApplicationModelResolver.isIncubatingEnabled(modelProps)
+                    || devMode
+                            && !IncubatingApplicationModelResolver.isIncubatingModelResolverProperty(modelProps, "false"));
+        }
+        return appModelResolver;
     }
 
     private BootstrapMavenContext createBootstrapMavenContext() throws AppModelResolverException {
@@ -196,35 +206,26 @@ public class BootstrapAppModelFactory {
     }
 
     public CurationResult resolveAppModel() throws BootstrapException {
-        // gradle tests and dev encode the result on the class path
-        final String serializedModel;
-        if (test) {
-            serializedModel = System.getProperty(BootstrapConstants.SERIALIZED_TEST_APP_MODEL);
-        } else {
-            serializedModel = System.getProperty(BootstrapConstants.SERIALIZED_APP_MODEL);
+        CurationResult result = loadFromSystemProperty();
+        if (result != null) {
+            return result;
         }
 
-        if (serializedModel != null) {
-            final Path p = Paths.get(serializedModel);
-            if (Files.exists(p)) {
-                try (InputStream existing = Files.newInputStream(Paths.get(serializedModel))) {
-                    final ApplicationModel appModel = (ApplicationModel) new ObjectInputStream(existing).readObject();
-                    return new CurationResult(appModel);
-                } catch (IOException | ClassNotFoundException e) {
-                    log.error("Failed to load serialized app mode", e);
-                }
-                IoUtils.recursiveDelete(p);
-            } else {
-                log.error("Failed to locate serialized application model at " + serializedModel);
-            }
+        result = createAppModelForJarOrNull(projectRoot);
+        if (result != null) {
+            return result;
         }
 
-        // Massive hack to dected zipped/jar
-        if (projectRoot != null
-                && (!Files.isDirectory(projectRoot) || projectRoot.getFileSystem().getClass().getName().contains("Zip"))) {
-            return createAppModelForJar(projectRoot);
-        }
+        return resolveAppModelForWorkspace();
+    }
 
+    /**
+     * Resolves an application for a project in a workspace.
+     *
+     * @return application model
+     * @throws BootstrapException in case of a failure
+     */
+    private CurationResult resolveAppModelForWorkspace() throws BootstrapException {
         ResolvedDependency appArtifact = this.appArtifact;
         try {
             LocalProject localProject = null;
@@ -253,27 +254,10 @@ public class BootstrapAppModelFactory {
                 cachedCpPath = resolveCachedCpPath(localProject);
                 if (Files.exists(cachedCpPath)
                         && workspace.getLastModified() < Files.getLastModifiedTime(cachedCpPath).toMillis()) {
-                    try (DataInputStream reader = new DataInputStream(Files.newInputStream(cachedCpPath))) {
-                        if (reader.readInt() == CP_CACHE_FORMAT_ID) {
-                            if (reader.readInt() == workspace.getId()) {
-                                ObjectInputStream in = new ObjectInputStream(reader);
-                                ApplicationModel appModel = (ApplicationModel) in.readObject();
-
-                                log.debugf("Loaded cached AppModel %s from %s", appModel, cachedCpPath);
-                                for (ResolvedDependency d : appModel.getDependencies()) {
-                                    for (Path p : d.getResolvedPaths()) {
-                                        if (!Files.exists(p)) {
-                                            throw new IOException("Cached artifact does not exist: " + p);
-                                        }
-                                    }
-                                }
-                                return new CurationResult(appModel);
-                            } else {
-                                debug("Cached deployment classpath has expired for %s", appArtifact);
-                            }
-                        } else {
-                            debug("Unsupported classpath cache format in %s for %s", cachedCpPath,
-                                    appArtifact);
+                    try {
+                        final ApplicationModel appModel = readAppModelWithWorkspaceId(cachedCpPath, workspace.getId());
+                        if (appModel != null) {
+                            return new CurationResult(appModel);
                         }
                     } catch (IOException e) {
                         log.warn("Failed to read deployment classpath cache from " + cachedCpPath + " for "
@@ -285,12 +269,9 @@ public class BootstrapAppModelFactory {
                     .resolveManagedModel(appArtifact, forcedDependencies, managingProject, reloadableModules));
             if (cachedCpPath != null) {
                 Files.createDirectories(cachedCpPath.getParent());
-                try (DataOutputStream out = new DataOutputStream(Files.newOutputStream(cachedCpPath))) {
-                    out.writeInt(CP_CACHE_FORMAT_ID);
-                    out.writeInt(workspace.getId());
-                    ObjectOutputStream obj = new ObjectOutputStream(out);
-                    obj.writeObject(curationResult.getApplicationModel());
-                } catch (Exception e) {
+                try {
+                    writeAppModelWithWorkspaceId(curationResult.getApplicationModel(), workspace.getId(), cachedCpPath);
+                } catch (IOException e) {
                     log.warn("Failed to write classpath cache", e);
                 }
             }
@@ -300,45 +281,99 @@ public class BootstrapAppModelFactory {
         }
     }
 
+    /**
+     * Attempts to load an application model from a file system path set as a value of a system property.
+     * In test mode the system property will be {@link BootstrapConstants#SERIALIZED_TEST_APP_MODEL}, otherwise
+     * it will be {@link BootstrapConstants#SERIALIZED_APP_MODEL}.
+     * <p>
+     * If the property was not set, the method will return null.
+     * <p>
+     * If the model could not deserialized, an error will be logged and null returned.
+     *
+     * @return deserialized application model or null
+     */
+    private CurationResult loadFromSystemProperty() {
+        // gradle tests and dev encode the result on the class path
+        final String serializedModel = test ? System.getProperty(BootstrapConstants.SERIALIZED_TEST_APP_MODEL)
+                : System.getProperty(BootstrapConstants.SERIALIZED_APP_MODEL);
+        if (serializedModel != null) {
+            final Path p = Paths.get(serializedModel);
+            if (Files.exists(p)) {
+                try (InputStream existing = Files.newInputStream(p)) {
+                    return new CurationResult((ApplicationModel) new ObjectInputStream(existing).readObject());
+                } catch (IOException | ClassNotFoundException e) {
+                    log.error("Failed to load serialized app mode", e);
+                }
+                IoUtils.recursiveDelete(p);
+            } else {
+                log.error("Failed to locate serialized application model at " + serializedModel);
+            }
+        }
+        return null;
+    }
+
     private boolean isWorkspaceDiscoveryEnabled() {
         return localProjectsDiscovery == null ? projectRoot != null && (test || devMode)
                 : localProjectsDiscovery;
     }
 
     private LocalProject loadWorkspace() throws AppModelResolverException {
-        return projectRoot == null || !Files.isDirectory(projectRoot)
-                ? null
-                : createBootstrapMavenContext().getCurrentProject();
+        if (projectRoot == null || !Files.isDirectory(projectRoot)) {
+            return null;
+        }
+        LocalProject project = createBootstrapMavenContext().getCurrentProject();
+        if (project == null) {
+            return null;
+        }
+        if (project.getDir().equals(projectRoot)) {
+            return project;
+        }
+        for (LocalProject p : project.getWorkspace().getProjects().values()) {
+            if (p.getDir().equals(projectRoot)) {
+                return p;
+            }
+        }
+        log.warnf("Expected project directory %s does not match current project directory %s", projectRoot, project.getDir());
+        return project;
     }
 
-    private CurationResult createAppModelForJar(Path appArtifactPath) {
-        AppModelResolver modelResolver = getAppModelResolver();
-        final ApplicationModel appModel;
-        ResolvedDependency appArtifact = this.appArtifact;
-        try {
-            if (appArtifact == null) {
-                appArtifact = ModelUtils.resolveAppArtifact(appArtifactPath);
+    /**
+     * Checks whether the project path is a JAR and if it is, creates an application model for it.
+     * If the project path is not a JAR, the method will return null.
+     *
+     * @param appArtifactPath application artifact path
+     * @return resolved application model or null
+     */
+    private CurationResult createAppModelForJarOrNull(Path appArtifactPath) {
+        if (projectRoot != null
+                && (!Files.isDirectory(projectRoot) || projectRoot.getFileSystem().getClass().getName().contains("Zip"))) {
+            AppModelResolver modelResolver = getAppModelResolver();
+            final ApplicationModel appModel;
+            ResolvedDependency appArtifact = this.appArtifact;
+            try {
+                if (appArtifact == null) {
+                    appArtifact = ModelUtils.resolveAppArtifact(appArtifactPath);
+                }
+                modelResolver.relink(appArtifact, appArtifactPath);
+                //we need some way to figure out dependencies here
+                appModel = modelResolver.resolveManagedModel(appArtifact, List.of(), managingProject,
+                        reloadableModules);
+            } catch (AppModelResolverException | IOException e) {
+                throw new RuntimeException("Failed to resolve initial application dependencies", e);
             }
-            modelResolver.relink(appArtifact, appArtifactPath);
-            //we need some way to figure out dependencies here
-            appModel = modelResolver.resolveManagedModel(appArtifact, Collections.emptyList(), managingProject,
-                    reloadableModules);
-        } catch (AppModelResolverException | IOException e) {
-            throw new RuntimeException("Failed to resolve initial application dependencies", e);
+            return new CurationResult(appModel);
         }
-        return new CurationResult(appModel);
+        return null;
     }
 
     private Path resolveCachedCpPath(LocalProject project) {
-        final String filePrefix = devMode ? "dev-" : (test ? "test-" : null);
-        return project.getOutputDir().resolve(QUARKUS).resolve(BOOTSTRAP)
-                .resolve(filePrefix == null ? APP_MODEL_DAT : filePrefix + APP_MODEL_DAT);
-    }
-
-    private static void debug(String msg, Object... args) {
-        if (log.isDebugEnabled()) {
-            log.debug(String.format(msg, args));
+        if (devMode) {
+            return BootstrapUtils.resolveSerializedAppModelPath(project.getOutputDir());
         }
+        if (test) {
+            return BootstrapUtils.getSerializedTestAppModelPath(project.getOutputDir());
+        }
+        return project.getOutputDir().resolve(QUARKUS).resolve(BOOTSTRAP).resolve(APP_MODEL_DAT);
     }
 
     public BootstrapAppModelFactory setMavenArtifactResolver(MavenArtifactResolver mavenArtifactResolver) {
